--- a/index.html
+++ b/index.html
@@ -12,20 +12,31 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Frontend Mentor | Crowdfunding product page</title>
-
   </head>
   <body>
     <header class="hero">
-      <nav class="hero-nav">
-        <img src="images/logo.svg" alt="">
+      <nav class="navbar">
+        <img src="images/logo.svg" alt="" />
         <ul class="nav-list">
-          <li class="nav-list-item">About</li>
+          <li class="nav-list-item">bout</li>
           <li class="nav-list-item">Discover</li>
           <li class="nav-list-item">Get Started</li>
         </ul>
+        <button class="btn-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
       </nav>
     </header>
     Mastercraft Bamboo Monitor Riser A beautiful & handcrafted monitor stand to
