--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar">
         <img src="images/logo.svg" alt="" />
         <ul class="nav-list">
-          <li class="nav-list-item">bout</li>
+          <li class="nav-list-item">About</li>
           <li class="nav-list-item">Discover</li>
           <li class="nav-list-item">Get Started</li>
         </ul>
